--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "4.4.5"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.23.1",
