--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xdd",
+  "name": "coders-lab-exercises",
   "private": true,
   "version": "4.5.0",
   "type": "module",
@@ -9,18 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.0.4",
     "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-config-react-app": "7.0.1",
+    "gh-pages": "^6.1.1",
     "prettier": "3.0.3",
-    "vite": "4.4.5"
+    "vite": "^4.5.3"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.23.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.26.0",
+    "react-router-dom": "^6.26.0",
     "sass": "1.67.0"
   }
 }
